--- a/index.html
+++ b/index.html
@@ -1,2 +1,97 @@
-<h1> Grad show! <h1>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
 
+  <link rel="stylesheet" type="text/css" href="style.min.css">
+
+</head>
+
+<body>
+
+  <div id="hero">
+    <div id="title-block">
+      <div id="title">
+        GRAD SHOW TITLE
+      </div>
+    </div>
+  </div>
+
+
+
+<div id="content">
+  <div id="sub-title">
+    Sheridan College Interaction Design Grad Show
+  </div>
+
+  <div id="description">
+    Here’s a short description of what our event is about and what
+    kind of work can be found there or whatever. Here’s a short
+    description of what our event is about and what kind of work
+    can be found there or whatever. Here’s a short
+    description of what our event is about and what kind of work
+    can be found there or whatever.
+  </div>
+
+  <div id = "when" class="column-5">
+    <h5>
+      WHEN
+    </h5>
+    <div class="info">
+      Wednesday, April 9
+    </div>
+    <div class="sub-info">
+      6:00pm - 9:30pm
+    </div>
+  </div>
+
+  <div id = "where" class="column-5">
+    <h5>
+      WHERE
+    </h5>
+    <div class="info">
+      Sapient Nitro
+    </div>
+    <div class="sub-info">
+      134 Peter Street,
+      12th Floor
+      Toronto, ON
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+<div id="canvas-block-block">
+  <h3>Create a Badge</h3>
+  <div id="canvas-block"></div>
+</div>
+
+
+<footer>
+    <form>
+      <label for="subscribe" id="subscribe-label">Subscribe for updates</label>
+      <input type="text" placeholder="Enter your email" id="subscribe"/>
+      <input type="submit" value="Subscribe" id="submit-button"/>
+
+      <ul>
+        <li>
+          <a href="#">Facebook</a>
+        </li>
+        <li>
+          <a href="#">Twitter</a>
+        </li>
+        <li>
+          <a href="#">Instagram</a>
+        </li>
+      </ul>
+    </form>
+  </footer>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+
+
+</body>
+</html>
