Integrated interactive demo code

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       Sapient Nitro
     </div>
     <div class="sub-info">
-      134 Peter Street,
-      12th Floor
+      134 Peter Street <br />
+      12th Floor<br />
       Toronto, ON
     </div>
   </div>
@@ -67,7 +67,17 @@
 
 <div id="canvas-block-block">
   <h3>Create a Badge</h3>
-  <div id="canvas-block"></div>
+  <div id="canvas-block">
+    <div class="controls">
+      <div>
+        <input type="range" id="sizeSlider" value="75">
+      </div>
+
+      <div>
+        <button class="changeColors" onclick="changeColors();">Change Colors</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 
