--- a/index.html
+++ b/index.html
@@ -1,107 +1,68 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <head>
+    <meta charset="UTF-8">
+    <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:900,900i" rel="stylesheet">
+  </head>
 
-  <link rel="stylesheet" type="text/css" href="style.min.css">
-
-</head>
-
-<body>
-
-  <div id="hero">
-    <div id="title-block">
-      <div id="title">
-        GRAD SHOW TITLE
-      </div>
-    </div>
-  </div>
-
-
-
-<div id="content">
-  <div id="sub-title">
-    Sheridan College Interaction Design Grad Show
-  </div>
-
-  <div id="description">
-    Here’s a short description of what our event is about and what
-    kind of work can be found there or whatever. Here’s a short
-    description of what our event is about and what kind of work
-    can be found there or whatever. Here’s a short
-    description of what our event is about and what kind of work
-    can be found there or whatever.
-  </div>
-
-  <div id = "when" class="column-5">
-    <h5>
-      WHEN
-    </h5>
-    <div class="info">
-      Wednesday, April 9
-    </div>
-    <div class="sub-info">
-      6:00pm - 9:30pm
-    </div>
-  </div>
-
-  <div id = "where" class="column-5">
-    <h5>
-      WHERE
-    </h5>
-    <div class="info">
-      Sapient Nitro
-    </div>
-    <div class="sub-info">
-      134 Peter Street <br />
-      12th Floor<br />
-      Toronto, ON
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-<div id="canvas-block-block">
-  <h3>Create a Badge</h3>
-  <div id="canvas-block">
-    <div class="controls">
-      <div>
-        <input type="range" id="sizeSlider" value="75">
+  <body>
+    <div id="content">
+      <div id="logo">
+        <img id="brandmark" src="img/logo.svg"/>
+        <div id = "logotype">
+          INTERACTIVE <br />
+          MONSTERS
+        </div>
       </div>
 
-      <div>
-        <button class="changeColors" onclick="changeColors();">Change Colors</button>
+      <div id="title-block">
+        <div class="title-label">
+          SHERIDAN COLLEGE
+        </div>
+        <div class="line"></div>
+        <h1>
+          interaction design 2017
+        </h1>
+        <div>
+          <a href="https://www.facebook.com/sheridanIXDshow"><img src="img/facebook-logo.svg" class="social-icon"/></a>
+          <a href="https://twitter.com/sheridanIXDshow"><img src="img/twitter-logo.svg" class="social-icon"/></a>
+          <img src="img/instagram-logo.svg"class="social-icon"/>
+          <div class="line"></div>
+          <div class="title-label">
+            GRAD SHOW
+          </div>
+        </div>
+
+      </div>
+
+      <div id="info">
+        <div id = "when">
+          <h4>
+            WHEN
+          </h4>
+          <div class = "details">
+            Wednesday, April 9 <br />
+            6:00pm - 9:30pm <br />
+            <span id="invite">invite only</span>
+          </div>
+        </div>
+
+        <div id = "where">
+          <h4>
+            WHEN
+          </h4>
+          <div class = "details">
+            Sapient Nitro<br />
+            134 Peter Street, 12th Floor<br />
+            Toronto, ON
+          </div>
+        </div>
+      </div>
+
+      <div id = "share">
+        SHARE YOUR SKETCH
       </div>
     </div>
-  </div>
-</div>
-
-
-<footer>
-    <form>
-      <label for="subscribe" id="subscribe-label">Subscribe for updates</label>
-      <input type="text" placeholder="Enter your email" id="subscribe"/>
-      <input type="submit" value="Subscribe" id="submit-button"/>
-
-      <ul>
-        <li>
-          <a href="#">Facebook</a>
-        </li>
-        <li>
-          <a href="#">Twitter</a>
-        </li>
-        <li>
-          <a href="#">Instagram</a>
-        </li>
-      </ul>
-    </form>
-  </footer>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-
-
-</body>
+  </body>
 </html>
