finished layout partially responsive

--- a/index.html
+++ b/index.html
@@ -7,62 +7,62 @@
   </head>
 
   <body>
-    <div id="content">
-      <div id="logo">
-        <img id="brandmark" src="img/logo.svg"/>
-        <div id = "logotype">
-          INTERACTIVE <br />
-          MONSTERS
-        </div>
-      </div>
 
-      <div id="title-block">
-        <div class="title-label">
-          SHERIDAN COLLEGE
-        </div>
-        <div class="line"></div>
-        <h1>
-          interaction design 2017
-        </h1>
-        <div>
-          <a href="https://www.facebook.com/sheridanIXDshow"><img src="img/facebook-logo.svg" class="social-icon"/></a>
-          <a href="https://twitter.com/sheridanIXDshow"><img src="img/twitter-logo.svg" class="social-icon"/></a>
-          <img src="img/instagram-logo.svg"class="social-icon"/>
-          <div class="line"></div>
-          <div class="title-label">
-            GRAD SHOW
-          </div>
-        </div>
-
-      </div>
-
-      <div id="info">
-        <div id = "when">
-          <h4>
-            WHEN
-          </h4>
-          <div class = "details">
-            Wednesday, April 9 <br />
-            6:00pm - 9:30pm <br />
-            <span id="invite">invite only</span>
-          </div>
-        </div>
-
-        <div id = "where">
-          <h4>
-            WHEN
-          </h4>
-          <div class = "details">
-            Sapient Nitro<br />
-            134 Peter Street, 12th Floor<br />
-            Toronto, ON
-          </div>
-        </div>
-      </div>
-
-      <div id = "share">
-        SHARE YOUR SKETCH
+    <div id="logo">
+      <img id="brandmark" src="img/logo.svg"/>
+      <div id = "logotype">
+        INTERACTIVE <br />
+        MONSTERS
       </div>
     </div>
+
+    <div id="title-block">
+      <div class="title-label">
+        SHERIDAN COLLEGE
+      </div>
+      <div class="line" id="top-line"></div>
+      <h1>
+        interaction design 2017
+      </h1>
+      <div>
+        <a href="https://www.facebook.com/sheridanIXDshow"><img src="img/facebook-logo.svg" class="social-icon"/></a>
+        <a href="https://twitter.com/sheridanIXDshow"><img src="img/twitter-logo.svg" class="social-icon"/></a>
+        <img src="img/instagram-logo.svg"class="social-icon"/>
+        <div class="line" id="bottom-line"></div>
+        <div class="title-label">
+          GRAD SHOW
+        </div>
+      </div>
+
+    </div>
+
+    <div id="info">
+      <div id = "when" class="info-box">
+        <h4>
+          WHEN
+        </h4>
+        <div class = "details">
+          Wednesday, April 9 <br />
+          6:00pm - 9:30pm <br />
+          <span id="invite">invite only</span>
+        </div>
+      </div>
+
+      <div id = "where" class="info-box">
+        <h4>
+          WHERE
+        </h4>
+        <div class = "details">
+          Sapient Nitro<br />
+          134 Peter Street, 12th Floor<br />
+          Toronto, ON
+        </div>
+      </div>
+    </div>
+
+    <div id = "share">
+      SHARE YOUR SKETCH
+    </div>
+
   </body>
 </html>
