--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width initial-scale=1">
     <meta charset="UTF-8">
+
+    <title>IXD 2017 Grad Show</title>
+
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:900,900i" rel="stylesheet">
   </head>
 
   <body onload="dropEgg()" >
-    <div class="loader" id="loader">
+     <!-- <div class="loader" id="loader">
       <img src="img/eggstill_small.png" id="egg" class="egg-still" onclick="openEgg()"/>
       <div id="hatch" class="hatch">
         click to hatch
       </div>
-    </div>
+    </div> -->
 
 
     <div id="logo">
@@ -32,12 +36,16 @@
         interaction design 2017
       </h1>
       <div>
-        <a href="https://www.facebook.com/sheridanIXDshow"><img src="img/facebook-logo.svg" class="social-icon"/></a>
-        <a href="https://twitter.com/sheridanIXDshow"><img src="img/twitter-logo.svg" class="social-icon"/></a>
-        <img src="img/instagram-logo.svg"class="social-icon"/>
-        <div class="line" id="bottom-line"></div>
-        <div class="title-label">
-          GRAD SHOW
+        <div id="social">
+          <a href="https://www.facebook.com/sheridanIXDshow"><img src="img/facebook-logo.svg" class="social-icon"/></a>
+          <a href="https://twitter.com/sheridanIXDshow"><img src="img/twitter-logo.svg" class="social-icon"/></a>
+          <img src="img/instagram-logo.svg"class="social-icon"/>
+        </div>
+        <div id="bottom-line-group">
+          <div class="line" id="bottom-line"></div>
+          <div class="title-label">
+            GRAD SHOW
+          </div>
         </div>
       </div>
 
@@ -92,6 +100,7 @@
 
       function openEgg(){
         if (shaking){
+          shaking = false;
           egg.src="img/eggcracking_small.gif";
           text.classList.remove("hatch-appear");
 
