--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="logo">
       <img id="brandmark" src="img/logo.svg"/>
       <div id = "logotype">
-        INTERACTIVE <br />
-        MONSTERS
+        INTO THE<br />
+        WILD
       </div>
     </div>
 
@@ -33,7 +33,8 @@
       </div>
       <div class="line" id="top-line"></div>
       <h1>
-        interaction design 2017
+        interaction <br />
+        design 2017
       </h1>
       <div>
         <div id="social">
@@ -75,9 +76,9 @@
       </div>
     </div>
 
-    <div id = "share">
+    <!-- <div id = "share">
       SHARE YOUR SKETCH
-    </div>
+    </div> -->
 
 
     <script>
