responsive css done

--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
   </head>
 
   <body onload="dropEgg()" >
-     <!-- <div class="loader" id="loader">
+    <div class="loader" id="loader">
       <img src="img/eggstill_small.png" id="egg" class="egg-still" onclick="openEgg()"/>
       <div id="hatch" class="hatch">
         click to hatch
       </div>
-    </div> -->
+    </div>
 
 
     <div id="logo">
       <img id="brandmark" src="img/logo.svg"/>
       <div id = "logotype">
-        INTO THE<br />
-        WILD
+        INTO THE WILD
       </div>
     </div>
 
