--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>IXD 2017 Grad Show</title>
 
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+    <script language="javascript" src="libraries/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="js/background.js"></script>
     <link rel="stylesheet" type="text/css" href="style.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:900,900i" rel="stylesheet">
   </head>
