--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <script>
       var shaking = false;
       var egg = document.getElementById("egg");
-      var text = document.getElementById("hatch");
+      var label = document.getElementById("hatch");
 
       function dropEgg(){
         // Wait 200 milliseconds before executing
@@ -95,7 +95,7 @@
         },1000);
         setTimeout(function() {
           egg.src="img/eggshaking_small.gif";
-          text.classList.add("hatch-appear");
+          label.classList.add("hatch-appear");
           shaking = true;
         }, 2500);
       }
@@ -104,7 +104,7 @@
         if (shaking){
           shaking = false;
           egg.src="img/eggcracking_small.gif";
-          text.classList.remove("hatch-appear");
+          label.classList.remove("hatch-appear");
 
           // Fade out egg
           setTimeout(function() {
