--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
   </head>
 
   <body onload="dropEgg()" >
-    <!-- <div class="loader" id="loader">
+    <div class="loader" id="loader">
       <img src="img/eggstill_small.png" id="egg" class="egg-still" onclick="openEgg()"/>
       <div id="hatch" class="hatch">
         click to hatch
       </div>
-    </div> -->
-
+    </div>
+    <div id="dimmer"> </div>
     <div id="gradient"> </div>
-
 
     <div id="logo">
       <img id="brandmark" src="img/logo.svg"/>
