Add Instagram link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="social">
           <a href="https://www.facebook.com/sheridanIXDshow"><img src="img/facebook-logo.svg" class="social-icon"/></a>
           <a href="https://twitter.com/sheridanIXDshow"><img src="img/twitter-logo.svg" class="social-icon"/></a>
-          <img src="img/instagram-logo.svg"class="social-icon"/>
+        <a href="https://www.instagram.com/ixd2017/"> <img src="img/instagram-logo.svg"class="social-icon"/></a> 
         </div>
         <div id="bottom-line-group">
           <div class="line" id="bottom-line"></div>
