--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -42,7 +42,7 @@
         <div id="social">
           <a href="https://www.facebook.com/sheridanIXDshow"><img src="img/facebook-logo.svg" class="social-icon"/></a>
           <a href="https://twitter.com/sheridanIXDshow"><img src="img/twitter-logo.svg" class="social-icon"/></a>
-        <a href="https://www.instagram.com/ixd2017/"> <img src="img/instagram-logo.svg"class="social-icon"/></a> 
+        <a href="https://www.instagram.com/ixd2017/"> <img src="img/instagram-logo.svg"class="social-icon"/></a>
         </div>
         <div id="bottom-line-group">
           <div class="line" id="bottom-line"></div>
@@ -60,9 +60,9 @@
           WHEN
         </h4>
         <div class = "details">
-          Wednesday, April 9 <br />
+          Wednesday, April 19 <br />
           6:00pm - 9:30pm <br />
-          <span id="invite">invite only</span>
+          <span id="invite"></span>
         </div>
       </div>
 
