Added new branding + other fixes

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -7,8 +7,7 @@
 
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" src="libraries/p5.dom.js"></script>
-    <script language="javascript" type="text/javascript" src="background.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.min.css">
+    <script language="javascript" type="text/javascript" src="background.js"></script>                                                                                                                                 <link rel="stylesheet" type="text/css" href="style.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700|Roboto:900,900i" rel="stylesheet">
   </head>
 
@@ -23,7 +22,7 @@
     <div id="gradient"> </div>
 
     <div id="logo">
-      <img id="brandmark" src="img/logo.svg"/>
+      <img id="brandmark" src="img/squiggle.svg"/>
       <div id = "logotype">
         INTO THE WILD
       </div>
@@ -71,7 +70,7 @@
           WHERE
         </h4>
         <div class = "details">
-          Sapient Nitro<br />
+          SapientRazorfish<br />
           134 Peter Street, 12th Floor<br />
           Toronto, ON
         </div>
