Mobile styling for landing page

--- a/Project-Gallery/index.html
+++ b/Project-Gallery/index.html
@@ -28,7 +28,9 @@
                 <img src="images/ixd2017-logo.png" alt="">
             </div>
 
+
             <div id="info">
+
                 <div id="when" class="info-box">
                     <h4>Wednesday, April 19</h4>
                     <div class="details">
@@ -46,6 +48,8 @@
                     </div>
 
                 </div>
+
+                <div id="mobile-message"><h4>View Student Work on Desktop</h4></div>
 
                 <div id="social">
                     <a href="https://www.facebook.com/sheridanIXDshow"><img src="images/facebook-logo.svg" class="social-icon" /></a>
