--- a/Project-Gallery/index.html
+++ b/Project-Gallery/index.html
@@ -49,8 +49,8 @@
 
                 </div>
 
-                <div id="mobile-message"><h4>View Student Work on Desktop</h4></div>
-
+               <!--  <div id="mobile-message"><h4>View Student Work on Desktop</h4></div>
+ -->
                 <div id="social">
                     <a href="https://www.facebook.com/sheridanIXDshow"><img src="images/facebook-logo.svg" class="social-icon" /></a>
                     <a href="https://twitter.com/sheridanIXDshow"><img src="images/twitter-logo.svg" class="social-icon" /></a>
