--- a/Project-Gallery/index.html
+++ b/Project-Gallery/index.html
@@ -115,7 +115,7 @@
             <div class="info">
 
                 <div class="student">
-                    <img src="http://placehold.it/150x150" class="round" alt="">
+                    <img src="images/headshots/{{headshot}}" class="round" alt="">
                     <h3>{{name}}</h3>
 
                     <p class="format">{{student-skills}}</p>
@@ -165,4 +165,3 @@
 </body>
 
 </html>
-
