--- a/Project-Gallery/index.html
+++ b/Project-Gallery/index.html
@@ -25,7 +25,7 @@
 
         <div id="show-details">
             <div id="logo">
-                <img src="images/ixd2017-logo.png" alt="">
+                <img src="images/Logo.svg" alt="">
             </div>
 
 
