--- a/Project-Gallery/index.html
+++ b/Project-Gallery/index.html
@@ -28,7 +28,6 @@
                 <img src="images/Logo.svg" alt="">
             </div>
 
-
             <div id="info">
 
                 <div id="when" class="info-box">
@@ -49,7 +48,7 @@
 
                 </div>
 
-               <!--  <div id="mobile-message"><h4>View Student Work on Desktop</h4></div>
+                <!--  <div id="mobile-message"><h4>View Student Work on Desktop</h4></div>
  -->
                 <div id="social">
                     <a href="https://www.facebook.com/sheridanIXDshow"><img src="images/facebook-logo.svg" class="social-icon" /></a>
@@ -75,8 +74,6 @@
     </div>
 
     <script id="gallery" type="text/x-handlebars-template">
-
-    {{debug}}
 
         {{#each projects}}
 
@@ -119,17 +116,11 @@
                     <h3>{{name}}</h3>
 
                     <p class="format">
-                      {{#each student-skills}}
-                        {{#unless @last}} {{this}},&nbsp;{{/unless}}
-                        {{#if @last}} {{this}} {{/if}}
-                      {{/each}}
+                        {{#each student-skills}} {{#unless @last}} {{this}},&nbsp;{{/unless}} {{#if @last}} {{this}} {{/if}} {{/each}}
                     </p>
                     <p>
-                      <!--handle commas in bio being exported as array delimiters-->
-                      {{#each bio}}
-                        {{#unless @last}} {{this}},&nbsp;{{/unless}}
-                        {{#if @last}} {{this}} {{/if}}
-                      {{/each}}
+                        <!--handle commas in bio being exported as array delimiters-->
+                        {{#each bio}} {{#unless @last}} {{this}},&nbsp;{{/unless}} {{#if @last}} {{this}} {{/if}} {{/each}}
                     </p>
 
                     <p><a href="{{portfolio_url}}">Portfolio →</a></p>
@@ -176,3 +167,4 @@
 </body>
 
 </html>
+
