--- a/Project-Gallery/index.html
+++ b/Project-Gallery/index.html
@@ -123,7 +123,9 @@
                         {{#each bio}} {{#unless @last}} {{this}},&nbsp;{{/unless}} {{#if @last}} {{this}} {{/if}} {{/each}}
                     </p>
 
+                    {{#if portfolio_url}}
                     <p><a href="{{portfolio_url}}">Portfolio →</a></p>
+                    {{/if}}
                 </div>
 
                 <div class="p-details">
